--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Sklearn/tutorial_stuff/tutorial_data
 /Tensorflow/Semantic Analysis/data.csv
 /Tensorflow/tutorial_stuff/data
+/Tensorflow/tutorial_stuff/lego_model.h5
