--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Tensorflow/Semantic Analysis/data.csv
 /Tensorflow/tutorial_stuff/data
 /Tensorflow/tutorial_stuff/lego_model.h5
+/Hadoop/data
+/Hadoop/code/reviews.json
